// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    columns={Array []}
    data={
      Array [
        Object {
          "description": "lorem",
          "id": 1,
          "title": "Lorem",
        },
        Object {
          "description": "ipsum",
          "id": 2,
          "title": "Ipsum",
        },
      ]
    }
    isDisabled={false}
    shouldInitPreload={false}
    transformer={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <li>
          <ListItem
            description="lorem"
            id={1}
            shouldInitPreload={false}
            title="Lorem"
          />
        </li>,
        <li>
          <ListItem
            description="ipsum"
            id={2}
            shouldInitPreload={false}
            title="Ipsum"
          />
        </li>,
      ],
      "className": "root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "host",
        "props": Object {
          "children": <ListItem
            description="lorem"
            id={1}
            shouldInitPreload={false}
            title="Lorem"
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "cta": undefined,
            "description": "lorem",
            "id": 1,
            "shouldInitPreload": false,
            "title": "Lorem",
          },
          "ref": null,
          "rendered": null,
          "type": "ListItem",
        },
        "type": "li",
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "host",
        "props": Object {
          "children": <ListItem
            description="ipsum"
            id={2}
            shouldInitPreload={false}
            title="Ipsum"
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "cta": undefined,
            "description": "ipsum",
            "id": 2,
            "shouldInitPreload": false,
            "title": "Ipsum",
          },
          "ref": null,
          "rendered": null,
          "type": "ListItem",
        },
        "type": "li",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li>
            <ListItem
              description="lorem"
              id={1}
              shouldInitPreload={false}
              title="Lorem"
            />
          </li>,
          <li>
            <ListItem
              description="ipsum"
              id={2}
              shouldInitPreload={false}
              title="Ipsum"
            />
          </li>,
        ],
        "className": "root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": <ListItem
              description="lorem"
              id={1}
              shouldInitPreload={false}
              title="Lorem"
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cta": undefined,
              "description": "lorem",
              "id": 1,
              "shouldInitPreload": false,
              "title": "Lorem",
            },
            "ref": null,
            "rendered": null,
            "type": "ListItem",
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": <ListItem
              description="ipsum"
              id={2}
              shouldInitPreload={false}
              title="Ipsum"
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cta": undefined,
              "description": "ipsum",
              "id": 2,
              "shouldInitPreload": false,
              "title": "Ipsum",
            },
            "ref": null,
            "rendered": null,
            "type": "ListItem",
          },
          "type": "li",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`List should render 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    columns={Array []}
    data={
      Array [
        Object {
          "description": "lorem",
          "id": 1,
          "title": "Lorem",
        },
        Object {
          "description": "ipsum",
          "id": 2,
          "title": "Ipsum",
        },
      ]
    }
    isDisabled={true}
    shouldInitPreload={false}
    transformer={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <li>
          <ListItem
            description="lorem"
            id={1}
            shouldInitPreload={false}
            title="Lorem"
          />
        </li>,
        <li>
          <ListItem
            description="ipsum"
            id={2}
            shouldInitPreload={false}
            title="Ipsum"
          />
        </li>,
      ],
      "className": "root rootDisabled",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "host",
        "props": Object {
          "children": <ListItem
            description="lorem"
            id={1}
            shouldInitPreload={false}
            title="Lorem"
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "cta": undefined,
            "description": "lorem",
            "id": 1,
            "shouldInitPreload": false,
            "title": "Lorem",
          },
          "ref": null,
          "rendered": null,
          "type": "ListItem",
        },
        "type": "li",
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "host",
        "props": Object {
          "children": <ListItem
            description="ipsum"
            id={2}
            shouldInitPreload={false}
            title="Ipsum"
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "cta": undefined,
            "description": "ipsum",
            "id": 2,
            "shouldInitPreload": false,
            "title": "Ipsum",
          },
          "ref": null,
          "rendered": null,
          "type": "ListItem",
        },
        "type": "li",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li>
            <ListItem
              description="lorem"
              id={1}
              shouldInitPreload={false}
              title="Lorem"
            />
          </li>,
          <li>
            <ListItem
              description="ipsum"
              id={2}
              shouldInitPreload={false}
              title="Ipsum"
            />
          </li>,
        ],
        "className": "root rootDisabled",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": <ListItem
              description="lorem"
              id={1}
              shouldInitPreload={false}
              title="Lorem"
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cta": undefined,
              "description": "lorem",
              "id": 1,
              "shouldInitPreload": false,
              "title": "Lorem",
            },
            "ref": null,
            "rendered": null,
            "type": "ListItem",
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": <ListItem
              description="ipsum"
              id={2}
              shouldInitPreload={false}
              title="Ipsum"
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cta": undefined,
              "description": "ipsum",
              "id": 2,
              "shouldInitPreload": false,
              "title": "Ipsum",
            },
            "ref": null,
            "rendered": null,
            "type": "ListItem",
          },
          "type": "li",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`List should render 3`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    columns={Array []}
    data={Array []}
    isDisabled={false}
    shouldInitPreload={false}
    transformer={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`List should render 4`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    columns={Array []}
    data={
      Array [
        Object {
          "description": "lorem",
          "id": 1,
          "title": "Lorem",
        },
        Object {
          "description": "ipsum",
          "id": 2,
          "title": "Ipsum",
        },
      ]
    }
    isDisabled={false}
    shouldInitPreload={false}
    transformer={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <li>
          <ListItem
            id={2}
            shouldInitPreload={false}
          />
        </li>,
        <li>
          <ListItem
            id={4}
            shouldInitPreload={false}
          />
        </li>,
      ],
      "className": "root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "host",
        "props": Object {
          "children": <ListItem
            id={2}
            shouldInitPreload={false}
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "cta": undefined,
            "id": 2,
            "shouldInitPreload": false,
          },
          "ref": null,
          "rendered": null,
          "type": "ListItem",
        },
        "type": "li",
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "host",
        "props": Object {
          "children": <ListItem
            id={4}
            shouldInitPreload={false}
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "cta": undefined,
            "id": 4,
            "shouldInitPreload": false,
          },
          "ref": null,
          "rendered": null,
          "type": "ListItem",
        },
        "type": "li",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li>
            <ListItem
              id={2}
              shouldInitPreload={false}
            />
          </li>,
          <li>
            <ListItem
              id={4}
              shouldInitPreload={false}
            />
          </li>,
        ],
        "className": "root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": <ListItem
              id={2}
              shouldInitPreload={false}
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cta": undefined,
              "id": 2,
              "shouldInitPreload": false,
            },
            "ref": null,
            "rendered": null,
            "type": "ListItem",
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "host",
          "props": Object {
            "children": <ListItem
              id={4}
              shouldInitPreload={false}
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cta": undefined,
              "id": 4,
              "shouldInitPreload": false,
            },
            "ref": null,
            "rendered": null,
            "type": "ListItem",
          },
          "type": "li",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`List should render 5`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    columns={Array []}
    data={
      Array [
        Object {
          "description": "lorem",
          "id": 1,
          "title": "Lorem",
        },
        Object {
          "description": "ipsum",
          "id": 2,
          "title": "Ipsum",
        },
      ]
    }
    isDisabled={false}
    shouldInitPreload={true}
    transformer={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <li>
          <ListItem
            description="lorem"
            id={1}
            shouldInitPreload={true}
            title="Lorem"
          />
        </li>,
        <li>
          <ListItem
            description="ipsum"
            id={2}
            shouldInitPreload={true}
            title="Ipsum"
          />
        </li>,
      ],
      "className": "root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "host",
        "props": Object {
          "children": <ListItem
            description="lorem"
            id={1}
            shouldInitPreload={true}
            title="Lorem"
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "cta": undefined,
            "description": "lorem",
            "id": 1,
            "shouldInitPreload": true,
            "title": "Lorem",
          },
          "ref": null,
          "rendered": null,
          "type": "ListItem",
        },
        "type": "li",
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "host",
        "props": Object {
          "children": <ListItem
            description="ipsum"
            id={2}
            shouldInitPreload={true}
            title="Ipsum"
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "cta": undefined,
            "description": "ipsum",
            "id": 2,
            "shouldInitPreload": true,
            "title": "Ipsum",
          },
          "ref": null,
          "rendered": null,
          "type": "ListItem",
        },
        "type": "li",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li>
            <ListItem
              description="lorem"
              id={1}
              shouldInitPreload={true}
              title="Lorem"
            />
          </li>,
          <li>
            <ListItem
              description="ipsum"
              id={2}
              shouldInitPreload={true}
              title="Ipsum"
            />
          </li>,
        ],
        "className": "root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": <ListItem
              description="lorem"
              id={1}
              shouldInitPreload={true}
              title="Lorem"
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cta": undefined,
              "description": "lorem",
              "id": 1,
              "shouldInitPreload": true,
              "title": "Lorem",
            },
            "ref": null,
            "rendered": null,
            "type": "ListItem",
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": <ListItem
              description="ipsum"
              id={2}
              shouldInitPreload={true}
              title="Ipsum"
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cta": undefined,
              "description": "ipsum",
              "id": 2,
              "shouldInitPreload": true,
              "title": "Ipsum",
            },
            "ref": null,
            "rendered": null,
            "type": "ListItem",
          },
          "type": "li",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
